First version of -Our Story- page added

--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
 	<title>Access Journal</title>
 	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body >
@@ -12,7 +17,7 @@
 			<p class="logo">ACCESS 10th</p>
 			<nav>
 				<a href="#">Home</a>
-				<a href="#">Our Story</a>
+				<a href="ourstory.html">Our Story</a>
 				<a href="#">Credits</a>
 			</nav>
 		</div>
@@ -23,7 +28,7 @@
 		<button>Look at our story!</button>
 	</section>
 
-	<section id="ContentLeft">
+	<section class="ContentLeft">
 		<div class="container">				
 			<div class="img-container"></div>
 			<div class="texto">
@@ -38,7 +43,7 @@
 		</div>			
 	</section>
 
-	<section id="ContentRight">
+	<section class="ContentRight">
 		<div class="container">						
 			<div class="texto">
 			<h2>What makes generation 10th different?</h2>
